--- a/src/backupgnucash/BackupGnuCash.fxml
+++ b/src/backupgnucash/BackupGnuCash.fxml
@@ -55,52 +55,69 @@
       <Insets bottom="25.0" left="15.0" right="15.0" top="15.0" />
    </padding>
    <children>
-      <Text fx:id="sceneTitle" strokeType="OUTSIDE" strokeWidth="0.0" text="Backup GnuCash" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER">
+       <Text fx:id="sceneTitle" strokeType="OUTSIDE" strokeWidth="0.0" text="Backup GnuCash" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER">
          <font>
             <Font name="Tahoma" size="24.0" />
          </font>
       </Text>
-      <Text fx:id="versionNo" strokeType="OUTSIDE" strokeWidth="0.0" text="V# 1.20 28 Jun 2016" textAlignment="RIGHT" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT">
+      <Text fx:id="versionNo" strokeType="OUTSIDE" strokeWidth="0.0" text="V# 1.20 17 Jul 2016" textAlignment="RIGHT" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT">
          <font>
             <Font size="12.0" />
          </font>
       </Text>
-      <Button fx:id="btnSaveSettings" mnemonicParsing="false" onAction="#handleBtnActionSaveSettings" prefHeight="25.0" prefWidth="200.0" text="Save Settings" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="9" />
-      <Label fx:id="lblGCDatFilStr" text="GnuCash data" GridPane.rowIndex="3">
+      <Label fx:id="bookLbl" text="Book" GridPane.rowIndex="3">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtGcDatFilStr" prefWidth="500.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3" />
-      <Button fx:id="btnChooseGCDatFil" mnemonicParsing="false" onAction="#handleBtnActionChooseGCDat" prefHeight="28.0" prefWidth="80.0" text="Browse" GridPane.columnIndex="4" GridPane.rowIndex="3">
+      <ComboBox fx:id="bookComboBox" editable="true" onAction="#handleBookComboBoxOnAction" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <CheckBox fx:id="defaultBookChb" mnemonicParsing="false" text="Default" GridPane.columnIndex="2" GridPane.rowIndex="3">
+         <font>
+            <Font size="14.0" />
+         </font></CheckBox>
+      <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#handleBtnActionDelete" prefHeight="25.0" prefWidth="87.0" text="Delete" GridPane.columnIndex="3" GridPane.rowIndex="3">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Label fx:id="lblGCModDate" styleClass="labelNotBold" text="Modifed" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-      <Label fx:id="lblGCVer" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="110.0" text="Version" GridPane.rowIndex="5">
+      <Label fx:id="lblGCDatFilStr" text="GnuCash data" GridPane.rowIndex="5">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtGcVer" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Label fx:id="lblDropBox" text="Dropbox" GridPane.rowIndex="7">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtDropBox" prefHeight="25.0" prefWidth="535.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="7" />
-      <Button fx:id="btnChooseDropBox" mnemonicParsing="false" onAction="#handleBtnActionChooseDropBox" prefHeight="28.0" prefWidth="80.0" text="Browse" GridPane.columnIndex="4" GridPane.rowIndex="7">
+      <TextField fx:id="txtGcDatFilStr" prefWidth="500.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="5" />
+      <Button fx:id="btnChooseGCDatFil" mnemonicParsing="false" onAction="#handleBtnActionChooseGCDat" prefHeight="28.0" prefWidth="80.0" text="Browse" GridPane.columnIndex="4" GridPane.rowIndex="5">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Label fx:id="lblPswd" text="Password" GridPane.rowIndex="11">
+      <Label fx:id="lblGCModDate" styleClass="labelNotBold" text="Modifed" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+      <Label fx:id="lblGCVer" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="110.0" text="Version" GridPane.rowIndex="7">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <PasswordField fx:id="txtPswd" prefHeight="25.0" prefWidth="150.0" promptText="Password" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-      <TextField fx:id="txtVisPswd" prefHeight="25.0" prefWidth="150.0" promptText="Password" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-      <CheckBox fx:id="chbShowPswd" mnemonicParsing="false" text="Show" GridPane.columnIndex="2" GridPane.rowIndex="11" />
+      <TextField fx:id="txtGcVer" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <Label fx:id="lblDropBox" text="Dropbox" GridPane.rowIndex="9">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtDropBox" prefHeight="25.0" prefWidth="535.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="9" />
+      <Button fx:id="btnChooseDropBox" mnemonicParsing="false" onAction="#handleBtnActionChooseDropBox" prefHeight="28.0" prefWidth="80.0" text="Browse" GridPane.columnIndex="4" GridPane.rowIndex="9">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="btnSaveSettings" mnemonicParsing="false" onAction="#handleBtnActionSaveSettings" prefHeight="25.0" prefWidth="200.0" text="Save Settings" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="10">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Label fx:id="lblPswd" text="Password" GridPane.rowIndex="12">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <PasswordField fx:id="txtPswd" prefHeight="25.0" prefWidth="150.0" promptText="Password" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+      <TextField fx:id="txtVisPswd" prefHeight="25.0" prefWidth="150.0" promptText="Password" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+      <CheckBox fx:id="chbShowPswd" mnemonicParsing="false" text="Show" GridPane.columnIndex="2" GridPane.rowIndex="12" />
       <Button fx:id="btnBupGC" mnemonicParsing="false" onAction="#handleBtnActionBupGC" prefHeight="25.0" prefWidth="200.0" text="Backup" GridPane.columnIndex="1" GridPane.rowIndex="13">
          <font>
             <Font size="14.0" />
@@ -111,10 +128,9 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextArea fx:id="taLog" editable="false" prefHeight="248.0" prefWidth="650.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="14" GridPane.rowSpan="8" />
+      <TextArea fx:id="taLog" editable="false" prefHeight="277.0" prefWidth="650.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="14" GridPane.rowSpan="8" />
       <Separator fx:id="sep1" prefHeight="0.0" prefWidth="110.0" GridPane.columnSpan="5" GridPane.rowIndex="2" />
-      <Separator fx:id="sep2" prefHeight="0.0" prefWidth="110.0" GridPane.columnSpan="5" GridPane.rowIndex="6" />
-      <Separator fx:id="sep3" prefHeight="0.0" prefWidth="110.0" GridPane.columnSpan="5" GridPane.rowIndex="8" />
-      <Separator fx:id="sep4" prefHeight="0.0" prefWidth="110.0" GridPane.columnSpan="5" GridPane.rowIndex="10" />
+      <Separator fx:id="sep2" prefHeight="0.0" prefWidth="110.0" GridPane.columnSpan="5" GridPane.rowIndex="8" />
+      <Separator fx:id="sep4" prefHeight="0.0" prefWidth="110.0" GridPane.columnSpan="5" GridPane.rowIndex="11" />
    </children>
 </GridPane>
